# copilot_demo

./: README.md  app.py  http_cache.sqlite  pyproject.toml  strompris.py
docs/: conf.py  index.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  strompris.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
docs/_build/html/_sources/: api.rst.txt  strompris.rst.txt
docs/_build/html/_static/: documentation_options.js
in3110_strompris.egg-info/: PKG-INFO  SOURCES.txt
klima/: app.py  clima_history.csv  clima_mean.csv  klima.py
klima/Templates/: klima.html
templates/: activity.html  strompris.html
tests/: test_app.py
