[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
version = "2023.11.10"
requires-python = ">=3.10"
license = {text = "MIT License"}
name = "in3110_strompris"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# read dependencies from requirements.txt
dependencies ={file = "requirements.txt"}
# Quick fix to handle errors related to python3 -m pip install -e .
# Taken from here https://stackoverflow.com/questions/75387904/how-to-exclude-tests-folder-from-the-wheel-of-a-pyproject-toml-managed-lib
[tool.setuptools.packages.find]
exclude = ["templates*", "klima*"]